<resources>
    <string name="app_name">Cloud</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="storage">Storage</string>
    <string name="get_cloud">Get Cloud</string>
    <string name="user_image">user image</string>
    <string name="menu_handeling">menu handeling</string>
    <string name="settings">Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="account">Account</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="hey">Hey!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?!</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create new Account!</string>
    <string name="about">About?</string>
    <string name="welcome">Welcome!</string>
    <string name="user_name">User Name</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">Already have Account?!</string>
    <string name="hh_mm_yy">hh/mm/yy</string>
    <string name="size">size</string>
    <string name="logout">Logout</string>
</resources>