<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_login_foreground"
        android:foreground="@drawable/ic_login_background"
        android:padding="30dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/ic_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hey"
            android:textColor="#fff"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_below="@+id/imageView2"
            android:fontFamily="sans-serif-light"

            android:layout_centerHorizontal="true"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:hint="@string/email"
            android:drawableEnd="@drawable/ic_mail"
            android:drawablePadding="10dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:layout_below="@+id/welcome"
            android:layout_marginTop="15dp"
            android:gravity="top"
            tools:ignore="Autofill,TextFields" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:drawableEnd="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:layout_below="@+id/email"
            android:layout_marginTop="15dp"
            android:gravity="top"
            tools:ignore="Autofill" />
        <TextView
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="#fff"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/password"/>
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="#fff"
            android:buttonTint="#ffffff"
            android:layout_below="@id/reset"/>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="#fff"
            android:textSize="45sp"
            android:layout_below="@id/checkBox"
            android:layout_marginTop="10dp"/>
        <android.widget.Button
            android:id="@+id/signin"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_style"
            android:foreground="@drawable/ic_arrow"
            android:foregroundGravity="center"
            android:layout_alignBottom="@id/textView3"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            />
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_line"
            android:layout_below="@id/textView3"
            android:layout_marginTop="30dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/newAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_below="@id/imageView3"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_below="@id/newAccount"
            android:layout_marginTop="10dp"/>
        <ProgressBar
            android:id="@+id/progress_bar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textView3"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            />

    </RelativeLayout>

</layout>
