<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profile.ProfileFragment">
<data>
    <variable
        name="viewModel"
        type="com.example.cloud.viewModels.ProfileViewModel" />
</data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_login_foreground"
        >
        <android.widget.Button
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/transparent"
            android:foreground="@drawable/ic_baseline_arrow_back_24"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/profile"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"/>
        <ImageView
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_line"
            android:layout_below="@id/textView3"
            android:layout_margin="15dp"
            android:contentDescription="@string/material_motion_easing_linear" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_below="@+id/textView"
            android:layout_marginTop="80dp"
            android:background="@color/upper" />

        <ImageView
            android:id="@+id/user_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/user_image"
            />
        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:text="@{viewModel.userName}"
            android:textSize="22sp"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:layout_below="@id/user_img"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/userAccount"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:text="@{viewModel.email}"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:layout_below="@id/userName"
            android:maxLines="1"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:layout_marginTop="10dp"
            tools:ignore="UnusedAttribute" />
        <TextView
            android:id="@+id/changeProfile"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/change_profile_picture"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:layout_below="@id/line4"
            android:maxLines="1"
            android:drawablePadding="7dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            app:drawableStartCompat="@drawable/ic_baseline_image_24" />
        <TextView
            android:id="@+id/deleteAccount"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:textColor="#AF1919"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:layout_below="@id/changeProfile"
            android:drawablePadding="7dp"
            android:maxLines="1"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            app:drawableStartCompat="@drawable/ic_baseline_delete_forever_24" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:layout_below="@id/view2"
            android:drawablePadding="5dp"
            android:maxLines="1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            app:drawableStartCompat="@drawable/ic_baseline_settings_24" />

        <ProgressBar
            android:id="@+id/progress_bar4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:visibility="gone"
            tools:visibility="visible"
            />



    </RelativeLayout>
</layout>