<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeFragment">
    <data>
        <variable
            name="viewModel"
            type="com.example.cloud.viewModels.HomeViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_login_foreground"
        android:foreground="@drawable/ic_login_background"
        android:paddingStart="15dp"
        android:paddingTop="30dp"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/transparent"
            android:contentDescription="@string/menu_handeling"
            android:foreground="@drawable/ic_menu" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-light"
            android:text="@string/get_cloud"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/userimg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_person"
            android:contentDescription="@string/user_image" />


        <RelativeLayout
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_below="@id/userimg"
            android:layout_marginTop="20dp"
            android:background="@drawable/view1_style"
            android:gravity="center_vertical"
            android:paddingStart="50dp"
            android:paddingEnd="50dp">

            <TextView
                android:id="@+id/storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/storage"
                android:textColor="@color/upper"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/size_used"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/storage"
                android:layout_alignParentEnd="true"
                android:fontFamily="sans-serif-light"
                android:text="@{viewModel.usage}"
                android:textColor="@color/upper"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />


            <ProgressBar
                android:id="@+id/storage_capacity"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="11dp"
                android:layout_below="@id/size_used"
                android:layout_marginTop="10dp"
                android:progress="@{viewModel.percentage.BYTES}"
                android:progressDrawable="@drawable/progress_style"
                android:progressTint="@color/upper" />
        </RelativeLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/view1"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/recycler_style"
            android:padding="15dp"
            />

        <TextView
            android:id="@+id/item_annotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:visibility="visible"
            tools:visibility="visible"
            tools:ignore="RelativeOverlap" />


        <ProgressBar
            android:id="@+id/progress_bar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:visibility="visible" />

        <android.widget.Button
            android:id="@+id/add"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_style"
            android:foreground="@drawable/ic_baseline_add_24"
            android:foregroundGravity="center"
            />

    </RelativeLayout>

</layout>